Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/DefiniteAssignment/T4717164.out
T4717164.java:20:11: compiler.err.except.never.thrown.in.try: java.lang.ClassNotFoundException
1 error
